[package]
name = "tunnel-manager"
version = "0.1.0"
edition = "2024"
description = "Tunnel 连接管理器"
authors = ["mr-wuliu <mr_wuliu@foxmail.com>"]
license = "MIT"
repository = "https://github.com/mr-wuliu/tunnel-manager"

[[bin]]
name = "tfa"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
dirs = "5.0"
